# pbim-preprocessing

./: Dockerfile  README.md  check_missing_data.py  main.py  pyproject.toml  test.py
configs/: build_qgs_dataset_with_anomalies.json  build_z24_dataset_avt.json  build_z24_dataset_fvt.json  build_z24_dataset_weeks.json  build_z24_dataset_with_anomalies.json  build_z24_dataset_with_anomalies_cluster.json  merge_pbim_dataset.json  merge_z24_dataset.json  pbim-weeks-1000ms-template.json  pbim-weeks-100ms-template.json  pbim-weeks-250ms-template.json  pbim-weeks-25ms-template.json  pbim-weeks-500ms-template.json  template_config.json  test.json  z24-weeks-1000ms-template.json  z24-weeks-100ms-template.json  z24-weeks-250ms-template.json  z24-weeks-25ms-template.json  z24-weeks-500ms-template.json
k8s/: assemble_job.yml  assemble_job_z24.yml  dev_pod.yml  merge_job.yml  postprocess_job.yml  preprocess_job.yml
model/: measurement.py  parser.py
parser/: data_parser.py  metadata_parser.py  parser.py
pbim_preprocessor/: assembler.py  data_parser.py  index.py  merge.py  metadata.py  metadata_parser.py  model.py  parser.py  processor.py  sampling.py  statistic.py  utils.py  writer.py
scripts/: assemble.sh  assemble_lux_dataset.sh  assemble_qgs_dataset.sh  assemble_z24_dataset.sh  build.sh  generate_lux_assemble_from_filtered_jobs.py  generate_lux_assemble_jobs.py  generate_lux_merge_configs_and_jobs.py  generate_lux_merge_configs_and_jobs_reference.py  generate_lux_postprocessing_jobs.py  generate_lux_postprocessing_jobs_reference.py  generate_lux_postprocessing_jobs_supervised.py  generate_lux_postprocessing_jobs_sweep.py  generate_merge_configs_and_jobs.py  generate_pbim_assemble_jobs.py  generate_pbim_merge_configs_and_jobs.py  generate_pbim_merge_configs_and_jobs_nosampling.py  (+10 more)
(+2008 files in other folders)
