[tool.poetry]
name = "pbim-preprocessor"
version = "0.1.0"
description = "Tool for parsing and preprocessing P-BIM project measurements"
authors = ["Johannes <johannes.kohlmann@stud-mail.uni-wuerzburg.de>"]
readme = "README.md"
packages = [{include = "pbim_preprocessor"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
dataclasses-json = "^0.5.7"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
