[tool.poetry]
name = "pbim-preprocessor"
version = "0.1.0"
description = "Tool for parsing and preprocessing P-BIM project measurements"
authors = ["Johannes <johannes.kohlmann@stud-mail.uni-wuerzburg.de>"]
readme = "README.md"
packages = [{include = "pbim_preprocessor", from = "."}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
dataclasses-json = "^0.5.7"
click = "^8.1.3"
jinja2 = "^3.1.2"
scipy = "^1.10.0"
nptdms = "^1.6.1"
pandas = "^1.5.3"
openpyxl = "^3.1.2"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
